# thesis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: certificates.cmake  cutest.cmake  functions.cmake
examples/: CMakeLists.txt  tls_server.c
include/: tls.h
src/: tls_tlse.c  tls_tlse.h
tests/: CMakeLists.txt  README.md  test_tls.c  test_tls_hs.c  test_tls_hs.h  test_tls_init.c  test_tls_init.h  test_tls_tlse.c  test_tls_tlse_check.c  test_tlse.c
tests/certs/: cert-2048.pem  cert-4096.pem  pk-rsa-2048.pem  pk-rsa-4096.pem
tests/certs/ecsda/: cert.pem  private-key.pem
